# TSE-ModernRedux

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README  README.md  docker-compose.yml
include/tse/: crawler.hpp  crypto.hpp  database.hpp  html.hpp  http_client.hpp  segmenter.hpp  simple_server.hpp  types.hpp  url.hpp
index/: 0TSESearch.cpp  Comm.h  CrtForwardIdx.cpp  CrtInvertedIdx.cpp  DisplayRst.cpp  DocIndex.cpp  DocSegment.cpp  Query.cpp  TSESearch.cpp
index/ChSeg/: Dict.cpp  Dict.h  HzSeg.cpp
serve/: SearchEngine.hpp  SimpleServer.hpp  main.cpp
src/: cli.cpp  crawler.cpp  crypto.cpp  database.cpp  html.cpp  http_client.cpp  segmenter.cpp  simple_server.cpp  url.cpp
tests/: test_core.cpp
tse/: CommonDef.h  Crawl.cpp  Crawl.h  Http.cpp  Http.h  Makefile  Page.cpp  Tse.h  Url.cpp  Url.h  cmake_install.cmake  seed
tse/hlink/: hlink.l
tse/lib/: misc.c  stack.h
tse/stack/: stack.c  stack.h
tse/uri/: uri.l
web/: app.js  index.html  style.css
